@@ -1214,6 +1214,10 @@ sub handle_options
 	}
     }
 
+  # Override portability-recursive warning.
+  switch_warning ('no-portability-recursive')
+    if option 'silent';
+
   if ($strictness == GNITS)
     {
       set_option ('readme-alpha', INTERNAL);
@@ -8188,10 +8192,6 @@ sub parse_arguments ()
       # In the next release we'll remove this entirely.
       $output_directory = '.';
     }
-
-  # Override portability-recursive warning.
-  process_global_option_list ($cli_where, 'silent')
-    if global_option 'silent';
 
   return unless @ARGV;
 
