@@ -1,5 +1,16 @@
 2009-03-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	`silent' mode unconditionally overrides portability-recursive.
+	* automake.in (parse_arguments): Don't handle a global `silent'
+	option here; instead, ...
+	(handle_options): ... handle the "normal" `silent' option here.
+	Override `portability-recursive' here, at the last point we deal
+	with options, instead ...
+	* lib/Automake/Options.pm (_process_option_list): ... of here.
+	* tests/silent6.test: Replace unportable make snippet, remove
+	FIXME note, add more test cases of options passed in the various
+	locations.
+
 	Drop extra line from compile rules when `silent' is not used.
 	* lib/am/depend2.am [!%FASTDEP%]: Only use the `%VERBOSE%
 	@AM_BACKSLASH@' extra line if ?VERBOSE?.
